# HWI-SDR-Testbed

./: README.md  pam16_hardware.grc  pam16_hardware.py  qam16_hardware.grc  qam16_hardware.py  qam64_hardware.grc  qam64_hardware.py  qpsk_hardware.grc  qpsk_hardware.py
gr-demonstrator/: CMakeLists.txt  MANIFEST.md  cmake_uninstall.cmake
gr-demonstrator/apps/: CMakeLists.txt
gr-demonstrator/docs/: CMakeLists.txt  README.demonstrator
gr-demonstrator/grc/: CMakeLists.txt  demonstrator_constellation_decoder_sic.block.yml  demonstrator_constellation_joint_decoder.block.yml  demonstrator_crc32_check.block.yml  demonstrator_diff_decoder_qpsk_cc.block.yml  demonstrator_diff_encoder_qpsk_cc.block.yml  demonstrator_dispersion_meas.block.yml  demonstrator_header_detector_bb.block.yml  demonstrator_sequence_detector_bb.block.yml  (+1 more)
gr-demonstrator/python/bindings/: CMakeLists.txt  constellation_decoder_sic_python.cc  constellation_joint_decoder_python.cc  crc32_check_python.cc  diff_decoder_qpsk_cc_python.cc  diff_encoder_qpsk_cc_python.cc  dispersion_meas_python.cc  failed_conversions.txt  header_detector_bb_python.cc  python_bindings.cc  sequence_detector_bb_python.cc  tag_sink_python.cc
gr-demonstrator/python/bindings/docstrings/: constellation_decoder_sic_pydoc_template.h  constellation_joint_decoder_pydoc_template.h  crc32_check_pydoc_template.h  diff_decoder_qpsk_cc_pydoc_template.h  diff_encoder_qpsk_cc_pydoc_template.h  dispersion_meas_pydoc_template.h  header_detector_bb_pydoc_template.h  sequence_detector_bb_pydoc_template.h  tag_sink_pydoc_template.h
(+61 files in other folders)
